--- a/app/views/page/blog.html.erb
+++ b/app/views/page/blog.html.erb
@@ -16,21 +16,17 @@
           <% @posts.each do |post| %>
             <div class="span4 post">
                 <div class="img">
-                    <a href="blogpost.html">
-                        <img src="/assets/blog1.png" alt="">
-                    </a>
+                    <%= link_to image_tag(post.image_url), "/blogpost?id=#{post.id}" %>
                 </div>
                 <div class="text">
-                    <h5><a href="blogpost.html">Clean Canvas beautiful responsive theme.</a></h5>
-                    <span class="date">Wed, 12 Dec.</span>
-                    <p>
-                        There are many variations of passages of generators on the  embarrassing hidden in  slightly distracted by these distribution of letters, as opposed.</p>
+                    <h5><a href="/blogpost?id=#{post.id}"><%= post.title %>.</a></h5>
+                    <span class="date"><%= post.updated_at.to_s(:db) %></span>
+                    <p><%= raw(strip_tags(post.content)).truncate(60) %></p>
                 </div>
                 <div class="author_box">
-                    <h6>Alejandra Galvan</h6>
-                    <p>Creative Director</p>
+                    <h6><%= post.keywords %></h6>
                 </div>
-                <a class="plus_wrapper" href="blogpost.html">
+                <a class="plus_wrapper" href="/blogpost?id=<%= post.id%>">
                     <span>&#43;</span>
                 </a>
             </div>
