--- a/app/views/page/product_item.html.erb
+++ b/app/views/page/product_item.html.erb
@@ -1,2 +1,21 @@
-<h1>Page#product_item</h1>
-<p>Find me in app/views/page/product_item.html.erb</p>
+<%= content_for(:head) do %>
+  <%= stylesheet_link_tag "theme/features" %>
+<% end %>
+
+<div id="features" class="features_page">
+  <div class="container">
+      <!-- Feature Wrapper -->
+      <div class="feature_wrapper option1">
+          <div class="section_header">
+              <h3>成功案例</h3>
+          </div>
+
+          <div class="row subtitle">
+              <h2>
+                 ........
+              </h2>
+  
+          </div>
+      </div>
+  </div>
+</div>
