--- a/app/views/page/services.html.erb
+++ b/app/views/page/services.html.erb
@@ -1,2 +1,103 @@
-<h1>Page#services</h1>
-<p>Find me in app/views/page/services.html.erb</p>
+<%= content_for(:head) do %>
+  <%= stylesheet_link_tag "theme/services" %>
+  <%= stylesheet_link_tag "theme/lib/flexslider" %>
+<% end %>
+
+
+<div id="service_1">
+  <div class="container">
+      <div class="section_header">
+          <h3>Services <span>(Option 1)</span></h3>
+      </div>
+      <div class="row service_wrapper">
+          <div class="span4 feature">
+              <div class="img_box">
+                  <a href="#">
+                      <img src="/assets/service1.png">
+                      <span class="circle"> 
+                          <span class="plus">+</span>
+                      </span>
+                  </a>
+              </div>
+              <div class="text">
+                  <h6>Responsive theme </h6>
+                  <p>
+                      There are many variations of passages of generators on the  embarrassing hidden in content here making it look like.</p>
+              </div>
+          </div>
+          <div class="span4 feature">
+              <div class="img_box">
+                  <a href="#">
+                      <img src="/assets/service2.png">
+                      <span class="circle"> 
+                          <span class="plus">+</span>
+                      </span>
+                  </a>
+              </div>
+              <div class="text">
+                  <h6>Easy customization </h6>
+                  <p>
+                      There are many variations of passages of generators on the  embarrassing hidden in content here making it look like.</p>
+              </div>
+          </div>
+          <div class="span4 feature last">
+              <div class="img_box">
+                  <a href="#">
+                      <img src="/assets/service3.png">
+                      <span class="circle"> 
+                          <span class="plus">+</span>
+                      </span>
+                  </a>
+              </div>
+              <div class="text">
+                  <h6>Made with love </h6>
+                  <p>
+                      There are many variations of passages of generators on the  embarrassing hidden in content here making it look like.</p>
+              </div>
+          </div>
+      </div>
+  </div>
+</div>
+
+<div id="service_2">
+  <div class="container">
+      <div class="section_header">
+          <h3>Services <span>(Option 2)</span></h3>
+      </div>
+      <div class="row perk">
+          <div class="span2 circle circle1">
+              <img src="/assets/service_ico1.png" alt="">
+          </div>
+
+          <div class="span10 description_wrapper">
+              <h5>Beautiful on all devices</h5>
+              <p>
+                  There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don’t look even slightly distracted by these distribution of letters, as opposed to using  Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don’t look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+          </div>
+      </div>
+
+      <div class="row perk">
+          <div class="span2 circle">
+              <img src="/assets/service_ico2.png" alt="">
+          </div>
+
+          <div class="span10 description_wrapper">
+              <h5>Blog page included</h5>
+              <p>
+                  There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don't look even slightly distracted by these distribution of letters, as opposed to using  Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don't look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+          </div>
+      </div>
+
+      <div class="row perk last">
+          <div class="span2 circle">
+              <img src="/assets/service_ico3.png" alt="">
+          </div>
+
+          <div class="span10 description_wrapper">
+              <h5>Simple and clean coming soon page</h5>
+              <p>
+                  There are many variations of passages of Lorem Ipsum available, injected generators on the  embarrassing hidden in the middle all the dictionary of  randomised words which don't look even slightly distracted by these distribution of letters, as opposed to using. Content here, content here making it look like readable English. Many desktop publishing packages and web page editors there many variation of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour or randomised words which don't look even slightly believable. If you are anything embarrassing hidden in the middle of text. </p>
+          </div>
+      </div>
+  </div>
+</div>
