--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -1,35 +1,36 @@
-<h1>Listing comments</h1>
+<h1>留言管理</h1>
 
-<table>
+<ul class="breadcrumb">
+  <li><%= link_to '返回', user_path(current_user.id), class: 'btn btn-reverse', type: 'button' %></li>
+</ul>
+
+<table class="table table-bordered table-stripped">
   <thead>
     <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th>Mobile phone</th>
-      <th>Content</th>
-      <th>Is processed</th>
-      <th></th>
-      <th></th>
-      <th></th>
+      <th>留言时间</th>
+      <th>姓名</th>
+      <th>电子邮件</th>
+      <th>手机号</th>
+      <th>留言内容</th>
+      <th>是否处理</th>
+      <th colspan="3">操作</th>
     </tr>
   </thead>
 
   <tbody>
     <% @comments.each do |comment| %>
       <tr>
+        <td><%= comment.created_at.to_s(:db) %></td>
         <td><%= comment.name %></td>
         <td><%= comment.email %></td>
         <td><%= comment.mobile_phone %></td>
         <td><%= comment.content %></td>
         <td><%= comment.is_processed %></td>
-        <td><%= link_to 'Show', comment %></td>
-        <td><%= link_to 'Edit', edit_comment_path(comment) %></td>
-        <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to '修改', edit_comment_path(comment) %></td>
+        <td><%= link_to '删除', comment, method: :delete, data: { confirm: '确定删除?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Comment', new_comment_path %>
