--- a/app/views/page/about.html.erb
+++ b/app/views/page/about.html.erb
@@ -1,2 +1,72 @@
-<h1>Page#about</h1>
-<p>Find me in app/views/page/about.html.erb</p>
+<%= content_for(:head) do %>
+  <%= stylesheet_link_tag "theme/contact" %>
+<% end %>
+
+<div id="contact">
+    <div class="container">
+        <div class="section_header">
+            <h3>Get in touch</h3>
+        </div>
+        <div class="row contact">
+            <p>
+                We’d love to hear from you. Interested in working together? Fill out the form below with some info about your project and I will get back to you as soon as I can. Please allow a couple days for me to respond.</p>
+
+            <%= simple_form_for(@comment) do |f| %>
+                <%= f.error_notification %>
+                <div class="row form">
+                    <div class="span6 box">
+                        <input type="text" name="comment[name]" placeholder="姓名" />
+                        <input type="text" name="comment[email]" placeholder="电子邮件" />
+                        <input type="text" name="comment[mobile_phone]" placeholder="手机号码" />
+                    </div>
+                    <div class="span6 box box_r">
+                        <textarea name="comment[content]" placeholder="输入要咨询的内容..."></textarea>
+                    </div>
+                </div>
+
+                <div class="row submit">
+                    <div class="span5 box">
+                        
+                    </div>
+                    <div class="span3 right">
+                        <input type="submit" value="提交我的信息">
+                    </div>
+                </div>
+            <% end %>
+        </div>
+    </div>
+
+    <div class="row map">
+        <div class="container">
+            <div class="span5 box_wrapp">
+                <div class="box_cont">
+                    <div class="head">
+                        <h6>Contact</h6>
+                    </div>
+                    <ul class="street">
+                        <li>2301 East Lamar Blvd. Suite 140.</li>
+                        <li>City, Arlington. United States,</li>
+                        <li>Zip Code, TX 76006.</li>
+                        <li class="icon icontop">
+                            <span class="contacticos ico1"></span>
+                            <span class="text">1 817 274 2933</span>
+                        </li>
+                        <li class="icon">
+                            <span class="contacticos ico2"></span>
+                            <a class="text" href="#">bootstrap@twitter.com</a>
+                        </li>
+                    </ul>
+
+                    <div class="head headbottom">
+                        <h6>Work with us</h6>
+                    </div>
+                    <p>We’ve prepared a simple project planner to get to know you and your project better.</p>
+
+                    <a href="#" class="btn">Let's get started</a>
+                </div>
+            </div>
+        </div>
+        <iframe width="100%" height="600" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.mx/?ie=UTF8&amp;ll=30.60748139277394,104.00894165039062&amp;spn=0.045157,0.15398&amp;t=m&amp;z=13&amp;output=embed"></iframe>
+    </div>
+</div>
+
