--- a/app/views/page/portfolio.html.erb
+++ b/app/views/page/portfolio.html.erb
@@ -1,2 +1,22 @@
-<h1>Page#portfolio</h1>
-<p>Find me in app/views/page/portfolio.html.erb</p>
+<%= content_for(:head) do %>
+  <%= stylesheet_link_tag "theme/features" %>
+<% end %>
+
+<div id="features" class="features_page">
+  <div class="container">
+      <!-- Feature Wrapper -->
+      <div class="feature_wrapper option1">
+          <div class="section_header">
+              <h3>模板展示</h3>
+          </div>
+
+          <div class="row subtitle">
+              <h2>
+                  There are many variations of passages of available, but the majority have suffered alteration in some on form, by injected humour, or randomised words which look even slightly believable.
+              </h2>
+              <img src="/assets/folio.png" ><br>
+              <img src="/assets/folio.png" >
+          </div>
+      </div>
+  </div>
+</div>
