--- a/app/assets/stylesheets/theme/index.css
+++ b/app/assets/stylesheets/theme/index.css
@@ -180,7 +180,7 @@
     position: absolute;
     top: 250px;
     left: 0;
-    background: url(../img/leftright-arrows.png) no-repeat;
+    background: url(/assets/leftright-arrows.png) no-repeat;
     opacity: .5;
     -webkit-transition: opacity .1s linear;
     -moz-transition: opacity .1s linear;
@@ -202,7 +202,7 @@
 /* Showcase services
 -------------------------------------------------- */
 #showcase {
-    margin-top: 70px;
+    /*margin-top: 70px;*/
 }
 #showcase .container {
     /*width: 980px;*/
@@ -476,19 +476,19 @@
     width: 138px;
 }
 #clients .client .client1 {
-    background: url('../img/client1.png') 0 -75px;
+    background: url('/assets/client1.png') 0 -75px;
 }
 #clients .client .client1:hover {
     background-position: 1px 0px;
 }
 #clients .client .client2 {
-    background: url('../img/client2.png') 0 -75px;
+    background: url('/assets/client2.png') 0 -75px;
 }
 #clients .client .client2:hover {
     background-position: -1px 0px;
 }
 #clients .client .client3 {
-    background: url('../img/client3.png') 0 -76px;
+    background: url('/assets/client3.png') 0 -76px;
 }
 #clients .client .client3:hover {
     background-position: 0px 0px;
