--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -20,12 +20,13 @@
     <article class="slide" id="showcasing" style="background: url('/assets/backgrounds/landscape.png') repeat-x top center;">
         <img class="asset left-30 sp600 t120 z1" src="/assets/slides/scene1/macbook.png" />
         <div class="info">
-            <h2>Beautiful theme for showcasing your works.</h2>
+            <h2>瑞信云  手机应用智能建站服务</h2>
+            
         </div>
     </article>
     <article class="slide" id="ideas" style="background: url('/assets/backgrounds/aqua.jpg') repeat-x top center;">
         <div class="info">
-            <h2>We love to turn ideas into beautiful things.</h2>
+            <h2>APP，精准营销的新工具.</h2>
         </div>
         <img class="asset left-480 sp600 t260 z1" src="/assets/slides/scene2/left.png" />
         <img class="asset left-210 sp600 t213 z2" src="/assets/slides/scene2/middle.png" />
@@ -37,8 +38,8 @@
         <img class="asset left-350 sp450 t135 z2" src="/assets/slides/scene3/desktop.png" />
         <img class="asset left-185 sp550 t220 z1" src="/assets/slides/scene3/macbook.png" />
         <div class="info">
-            <h2>Fully Responsive theme</h2>
-            <a href="features.html">TOUR THE PRODUCT</a>
+            <h2>企业APP全面起航</h2>
+            <a href="features.html">实用+互动+分享+增值</a>
         </div>
     </article>
     <article class="slide" id="responsive" style="background: url('/assets/backgrounds/indigo.jpg') repeat-x top center;">
@@ -46,8 +47,8 @@
         <img class="asset left-190 sp500 t120 z2" src="/assets/slides/scene4/css3.png" />
         <div class="info">
             <h2>
-                Responsive <strong>HTML5 & CSS3</strong>
-                Theme
+                响应 <strong>HTML5 & CSS3</strong>
+                最新技术
             </h2>                
         </div>
     </article>        
