Add turbolinks jquery

--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -20,7 +20,7 @@
 
     <div id="showcase">
       <div class="container">
-        <%= render 'layouts/messages' %>
+        fffff<%= render 'layouts/messages' %>
       </div>
     </div>
 
