--- a/app/views/page/_header.html.erb
+++ b/app/views/page/_header.html.erb
@@ -6,13 +6,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </a>
-        <a class="brand" href="/">
-            <strong>瑞信云科技</strong>
-        </a>
+        <%= link_to image_tag("/assets/logo.png"), root_path, :class => 'brand' %>
         <div class="nav-collapse collapse">
             <ul class="nav pull-right">
                 <li><a href="/" class="active">首页</a></li>
-                <li><a href="/pages/about">关于瑞信云</a></li>
+                <li><a href="/about">关于瑞信云</a></li>
       
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -20,12 +18,12 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="/pages/product">瑞信云产品</a></li>
-                        <li><a href="/pages/service">瑞信云服务</a></li>
-                        <li><a href="/pages/features">功能介绍</a></li>
-                        <li><a href="/pages/templetes">模板介绍</a></li>
-                        <li><a href="/pages/showcase">行业应用方案</a></li>
-                        <li><a href="/pages/markting">企业网络营销整体托管</a></li>
+                        <li><a href="/product">瑞信云产品</a></li>
+                        <li><a href="/service">瑞信云服务</a></li>
+                        <li><a href="/features">功能介绍</a></li>
+                        <li><a href="/templetes">模板介绍</a></li>
+                        <li><a href="/showcase">行业应用方案</a></li>
+                        <li><a href="/markting">企业网络营销整体托管</a></li>
                     </ul>
                 </li>
                 
@@ -48,8 +46,8 @@
                         <b class="caret"></b>
                     </a>
                     <ul class="dropdown-menu">
-                        <li><a href="pages/jmzc">经销加盟政策</a></li>
-                        <li><a href="/pages/jmsq">经销加盟申明</a></li>
+                        <li><a href="jmzc">经销加盟政策</a></li>
+                        <li><a href="/jmsq">经销加盟申明</a></li>
                     </ul>
                 </li>
 
