--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -16,7 +16,7 @@
 
   </head>
   <body class="pull_top <%= controller_name %> <%= action_name %>">
-    <%= render 'page/header' %>
+    <%= render 'pages/header' %>
 
     <div id="showcase">
       <div class="container">
@@ -27,6 +27,6 @@
     <%= yield %>
 
  
-    <%= render 'page/footer' %>
+    <%= render 'pages/footer' %>
   </body>
 </html>
