--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,17 +4,32 @@
 <div class="row row-fluid well">
   <div class="box">
     <%= link_to "页面管理", pages_url, class: "btn btn-large btn-primary", type: "button" %>
+    <div class="pull-right">
+      管理网站前台显示的每个页面。
+    </div>
   </div>
   <div class="box">
     <%= link_to "文章管理", posts_url, class: "btn btn-large btn-primary", type: "button" %>
+    <div class="">
+      管理"移动营销天地"里面的博客文章。
+    </div>
   </div>
   <div class="box">
     <%= link_to "项目案例", product_items_url, class: "btn btn-large btn-primary", type: "button" %>
+    <div class="">
+      管理项目案例。
+    </div>
   </div>
   <div class="box">
     <%= link_to "图片管理", resource_items_url, class: "btn btn-large btn-primary", type: "button" %>
+    <div class="">
+      管理整个网站所需要的图片资源。
+    </div>
   </div>
   <div class="box">
     <%= link_to "留言管理", comments_url, class: "btn btn-large btn-primary", type: "button" %>
+    <div class="">
+      管理用户留言。
+    </div>
   </div>
 </div>
